# OrderOps-Agent

./: .env.example  .gitignore  README.md  README_SPEC.md  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/orderops_api/: __init__.py  __main__.py  main.py
apps/api/src/orderops_api/agent/: __init__.py  graph.py  guard.py  llm_planner.py  state.py
apps/api/src/orderops_api/core/: config.py
apps/api/src/orderops_api/evaluation/: __init__.py  cases.py  metrics.py  runner.py
apps/api/src/orderops_api/llm/: __init__.py  client.py
apps/api/src/orderops_api/rag/: __init__.py  embedding.py  policies.py  qdrant.py  rerank.py  search.py
apps/api/src/orderops_api/routers/: agent.py  evals.py  health.py  tools.py
apps/api/src/orderops_api/tools/: __init__.py  analysis_tools.py  approval_tools.py  delivery_tools.py  logging.py  order_tools.py  policy_tools.py  refund_tools.py  sql_guard.py  sql_tools.py  ticket_tools.py
data/eval/: eval_cases_seed.csv
data/policies/: customer_communication_policy_v1.md  delivery_sla_policy_v1.md  privacy_and_permission_policy_v1.md  refund_policy_v1.md  seller_quality_policy_v1.md
data/sql/: target_schema.sql
docs/: AGENT_WORKFLOW.md  API_CONTRACT.yaml  BUILD_PLAN.md  BUSINESS_TOOLS.md  CODEX_TASKS.md  ETL.md  EVALUATION.md  LOCAL_INFRA.md  PHASE_STATUS.md  POLICY_RAG.md  PROJECT_SPEC.md  SUPPORT_TICKETS.md
scripts/: db_bootstrap.py  download_hf_snapshot.py  etl_olist.py  generate_support_tickets.py  index_policies.py  phase_smoke_check.py  run_agent_case.py  run_eval.py  search_policy.py
(+25 files in other folders)
