[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orderops-api"
version = "0.1.0"
description = "FastAPI service for the OrderOps Agent demo."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
local-rag = [
    "sentence-transformers>=3.0.0",
]
agent = [
    "langgraph>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
